[project]
name = "oas"
description = "Tools for PMC's Open Access Subset"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
  {name = "Mark Newman", email = "mark@trinetteandmark.com" }
]
maintainers = [
  {name = "Mark Newman", email = "mark@trinetteandmark.com" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic"
]

requires-python = ">=3.11"
dependencies = [
  "progressbar2>=3.51.4,<4.0.0",
  "lxml>=4.5.0,<5.0.0"
]
[project.optional-dependencies]
lint = [
  "types-lxml>=2024.2.9"
]

[project.urls]
"Homepage" = "https://github.com/TextCorpusLabs/oas"
"Bug Reports" = "https://github.com/TextCorpusLabs/oas/issues"
"Source" = "https://github.com/TextCorpusLabs/oas"

[project.scripts]
oas = "oas.__main__:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "oas.__init__.__version__"}
